8028438: static superclass method masks default methods

Reviewed-by: hseigel, lfoltan, coleenp